--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -2,5 +2,9 @@
     width: 100%;
     height: 70%;
     order: 2;
-    background-color: aliceblue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #F7F8F8;
 }
