--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -18,7 +18,7 @@
     flex-direction: row;
     width: 100%;
     height: 60%;
-    background-color: #F7F8F8;
+    background-color: #F9F9F9;
 }
 
 #headerName{
@@ -43,7 +43,7 @@
     width: max-content;
     float: none;
     margin: 0 auto;
-    color: #F7F8F8;
+    color: #F9F9F9;
 }
 
 #headerNav{
@@ -90,7 +90,7 @@
 
 .nav2DivText{
     font-size: 12px;
-    color: #F7F8F8;
+    color: #F9F9F9;
 }
 
 #footer{
@@ -125,7 +125,7 @@
 }
 
 #teleIcon{
-    border: 2px solid #F7F8F8;
+    border: 2px solid #F9F9F9;
     padding: 5px;
 }
 
@@ -143,7 +143,7 @@
 
 #teleText2{
     width: max-content;
-    color: #F7F8F8;
+    color: #F9F9F9;
 }
 
 #footerMail{
@@ -156,7 +156,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid #F7F8F8;
+    border: 2px solid #F9F9F9;
     padding-left: 5px;
     padding-right: 5px;
 }
@@ -175,7 +175,7 @@
 
 #mailText2{
     width: max-content;
-    color: #F7F8F8;
+    color: #F9F9F9;
 }
 
 .dropdown-content {
@@ -190,6 +190,7 @@
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
+    font-size: 12px;
     text-decoration: none;
     display: block;
 }
