--- a/css/aboutStyle.css
+++ b/css/aboutStyle.css
@@ -59,3 +59,67 @@
     max-width: 100%;
     max-height: 100%;
 }
+
+@media screen and (max-width: 1024px) and (min-width: 480px){
+
+    #aboutContainer {
+        width: 96%;
+        height: 98%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    #aboutImg {
+        width: 41%;
+        height: 60%;
+        /* margin-right: 4%; */
+    }
+
+    #aboutDesc {
+        width: 54%;
+        height: 68%;
+        margin-left: 1%;
+    }
+
+    .descText {
+        width: max-content;
+        font-size: 1.5vw;
+    }
+
+}
+
+@media screen and (max-width: 480px) {
+
+    #aboutContainer {
+        width: 96%;
+        height: 98%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    #aboutOuter {
+        width: 100%;
+        height: 96%;
+        flex-direction: column;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #aboutImg {
+        width: 61%;
+        height: 40%;
+        margin-top: 2%;
+    }
+
+    #aboutDesc {
+        width: 100%;
+        height: 60%;
+    }
+
+    .descText {
+        width: max-content;
+        font-size: 2.5vw;
+    }
+
+}
