--- a/css/bedStyle.css
+++ b/css/bedStyle.css
@@ -72,6 +72,12 @@
     justify-content: center;
 }
 
+#resultNumberText{
+    font-size: 12px;
+    width: max-content;
+    color: #8C8C8C;
+}
+
 #outer2{
     width: 100%;
     height: 90%;
@@ -130,6 +136,10 @@
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
+.bedBox:hover{
+    cursor: pointer;
+}
+
 .bedBoxImg{
     width: 100%;
     height: 68%;
@@ -142,4 +152,135 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+#productAddress{
+    margin-left: 60%;
+}
+
+.addressText2{
+    color: #8C8C8C;
+    font-size: 13px;
+    width: max-content;
+}
+
+@media screen and (max-width: 1024px) and (min-width: 480px){
+
+    #bedContainer{
+        width: 100%;
+        height: 98%;
+        display: flex;
+        flex-direction: column;
+    }
+
+}
+
+@media screen and (max-width: 480px) {
+
+    #bedContainer{
+        width: 100%;
+        height: 98%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    #productAddress{
+        margin-left: 25%;
+    }
+
+    .addressText {
+        color: #8C8C8C;
+        font-size: 3vw;
+        width: max-content;
+    }
+
+    #sort {
+        width: 60%;
+        height: 100%;
+        background-color: #F7F8F8;
+        display: flex;
+        /* justify-content: center; */
+        /* align-items: center; */
+    }
+
+    #sorting {
+        background-color: #ffffff;
+        border: 1px solid #BBC4C2;
+        color: #BBC4C2;
+        width: 70%;
+        height: 70%;
+        margin-top: 2.4%;
+    }
+
+    #resultNumber {
+        width: 40%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    #resultNumberText{
+        font-size: 3vw;
+        width: max-content;
+        color: #8C8C8C;
+    }
+
+    #outer2Wrapper {
+        width: 100%;
+        height: 500%;
+        display: flex;
+        /* flex-wrap: wrap; */
+        flex-direction: column;
+    }
+
+    #row1 {
+        width: 100%;
+        height: 37%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .bedBox {
+        width: 44%;
+        height: 43%;
+        background-color: #F7F8F8;
+        display: flex;
+        flex-direction: column;
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        margin-top: 4%;
+    }
+
+    #row2 {
+        width: 100%;
+        height: 37%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    #row3 {
+        width: 100%;
+        height: 37%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    #row4 {
+        width: 100%;
+        height: 37%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+         align-items: normal;
+        flex-wrap: wrap;
+    }
+
 }
