--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -21,6 +21,7 @@
     background-color: #F9F9F9;
 }
 
+
 #headerName{
     width: 40%;
     height: 100%;
@@ -44,6 +45,11 @@
     float: none;
     margin: 0 auto;
     color: #F9F9F9;
+    font-size: 2vw;
+}
+
+#headerNameDiv:hover{
+    cursor: pointer;
 }
 
 #headerNav{
@@ -65,8 +71,13 @@
 }
 
 .navDivText{
-    font-size: 12px;
+    font-size: 0.8vw;
     color: #1B2E3C;
+    width: max-content;
+}
+
+.navDivText:hover{
+    cursor: pointer;
 }
 
 #header2{
@@ -89,7 +100,7 @@
 }
 
 .nav2DivText{
-    font-size: 12px;
+    font-size: 0.8vw;
     color: #F9F9F9;
 }
 
@@ -144,6 +155,7 @@
 #teleText2{
     width: max-content;
     color: #F9F9F9;
+    font-size: 1vw;
 }
 
 #footerMail{
@@ -176,6 +188,7 @@
 #mailText2{
     width: max-content;
     color: #F9F9F9;
+    font-size: 1vw;
 }
 
 .dropdown-content {
@@ -190,7 +203,7 @@
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
-    font-size: 12px;
+    font-size: 0.8vw;
     text-decoration: none;
     display: block;
 }
@@ -199,4 +212,215 @@
 
 .dropdown:hover .dropdown-content {
     display: block;
+}
+
+@media screen and (max-width: 480px) {
+
+    #header{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 20%;
+        order: 1;
+    }
+
+    #header1{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 45%;
+        background-color: #F9F9F9;
+    }
+
+    #headerName{
+        width: 30%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #headerNameDiv{
+        width: 100%;
+        height: 70%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        background-color: #1B2E3C;
+    }
+
+    #headerNameH1{
+        width: max-content;
+        float: none;
+        margin: 0 auto;
+        color: #F9F9F9;
+        font-size: 4vw;
+    }
+
+    #headerNav{
+        width: 70%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #headerNavContainer{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: space-evenly;
+        width: 100%;
+        height: 80%;
+    }
+
+    .navDiv{
+        display: flex;
+        align-items: center;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .navDivText{
+        font-size: 12px;
+        color: #1B2E3C;
+        width: max-content;
+    }
+
+    #header2{
+        width: 100%;
+        height: 55%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #1B2E3C;
+    }
+
+    #header2NavContainer{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+
+    .nav2Div{
+        text-align: center;
+        width: 20%;
+        margin-left: 8px;
+        margin-right: 8px;
+    }
+
+    .nav2DivText{
+        font-size: 2vw;
+        color: #F9F9F9;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 140px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+
+    .dropdown-content a {
+        color: black;
+        padding: 10px 12px;
+        font-size: 2vw;
+        text-decoration: none;
+        display: block;
+    }
+
+    #footer{
+        width: 100%;
+        height: 10%;
+        display: flex;
+        flex-direction: row;
+        order: 3;
+        background-color: #1B2A37;
+    }
+
+    #footerDiv1 {
+        width: 100%;
+        height: 100%;
+        /*display: flex;
+        justify-content: center;
+        align-items: center;*/
+    }
+
+    #footerDiv2 {
+        /*width: 70%;*/
+        height: 100%;
+        /*display: flex;
+        justify-content: center;
+        align-items: center;*/
+    }
+
+    #footerTele {
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+        height: 50%;
+        margin-right: 15%;
+    }
+
+    #imgTele{
+        max-height: 100%;
+    }
+
+    #teleIcon {
+        border: 2px solid #F9F9F9;
+        padding: 5px;
+        width: 20px;
+    }
+
+    #teleText2{
+        width: max-content;
+        color: #F9F9F9;
+        font-size: 2.5vw;
+    }
+
+    #footerMail {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        height: 50%;
+    }
+
+    #imgMail{
+        max-height: 75%;
+    }
+
+    #mailIcon{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 2px solid #F9F9F9;
+        padding-left: 5px;
+        padding-right: 5px;
+        width: 20px;
+    }
+
+    #mailText2 {
+        width: max-content;
+        color: #F9F9F9;
+        font-size: 2.5vw;
+    }
+}
+
+@media screen and (max-width: 860px) and (min-width: 480px){
+
+    .navDivText {
+        font-size: 1.5vw;
+        color: #1B2E3C;
+        width: max-content;
+    }
+
+    .nav2DivText {
+        font-size: 1vw;
+        color: #F9F9F9;
+    }
+
 }
