--- a/css/productStyle.css
+++ b/css/productStyle.css
@@ -71,3 +71,25 @@
     background-color: #f0f0f0;
     border-bottom: 1px solid #8C8C8C;
 }
+
+@media screen and (max-width: 1024px) and (min-width: 480px){
+
+    #productContainer{
+        width: 98%;
+        height: 98%;
+        display: flex;
+        flex-direction: column;
+    }
+
+}
+
+@media screen and (max-width: 480px) {
+
+    #productContainer{
+        width: 98%;
+        height: 98%;
+        display: flex;
+        flex-direction: column;
+    }
+
+}
