--- a/css/aboutStyle.css
+++ b/css/aboutStyle.css
@@ -1,6 +1,6 @@
 #aboutContent{
     width: 100%;
-    height: 70%;
+    height: 75%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -110,6 +110,7 @@
         width: 61%;
         height: 40%;
         margin-top: 2%;
+        margin-right: 0;
     }
 
     #aboutDesc {
@@ -120,6 +121,7 @@
     .descText {
         width: max-content;
         font-size: 2.5vw;
+        margin-left: 4%;
     }
 
 }
