--- a/css/bedStyle.css
+++ b/css/bedStyle.css
@@ -1,6 +1,6 @@
 #bedContent{
     width: 100%;
-    height: 70%;
+    height: 75%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -173,6 +173,13 @@
         flex-direction: column;
     }
 
+    .addressText {
+        color: #8C8C8C;
+        font-size: 3vw;
+        width: max-content;
+        margin-left: 30%;
+    }
+
 }
 
 @media screen and (max-width: 480px) {
@@ -192,6 +199,7 @@
         color: #8C8C8C;
         font-size: 3vw;
         width: max-content;
+        margin-left: 30%;
     }
 
     #sort {
