--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -1,6 +1,6 @@
 #homeContent{
     width: 100%;
-    height: 70%;
+    height: 75%;
     order: 2;
     display: flex;
     flex-direction: column;
@@ -12,6 +12,12 @@
 #sliderOuter{
     width: 65%;
     height: 96%;
+}
+
+@media screen and (max-width: 1024px) and (min-width: 480px){
+
+
+
 }
 
 
