--- a/css/productStyle.css
+++ b/css/productStyle.css
@@ -1,6 +1,6 @@
 #productContent{
     width: 100%;
-    height: 70%;
+    height: 75%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -56,6 +56,39 @@
     height: 90%;
 }
 
+#descName{
+    width: max-content;
+    height: max-content;
+    color: #8C8C8C;
+    font-size: 20px;
+    margin: 2% 0 0 0;
+}
+
+#descCode{
+    width: max-content;
+    height: max-content;
+    color: #8C8C8C;
+    font-size: 12px;
+    margin: 0;
+}
+
+#descPrice{
+    width: max-content;
+    height: max-content;
+    color: #07aea4;
+    font-size: 22px;
+    margin-top: 4%;
+}
+
+#descDesc{
+    width: 80%;
+    height: max-content;
+    text-align: justify;
+    color: #8C8C8C;
+    font-size: 18px;
+    margin: 2% 0 0 0;
+}
+
 #productPart2{
     width: 100%;
     height: 25%;
@@ -70,6 +103,28 @@
     align-items: center;
     background-color: #f0f0f0;
     border-bottom: 1px solid #8C8C8C;
+}
+
+#productPenImg{
+    width: 3%;
+    height: 100%;
+    margin-left: 2%
+}
+
+#productPenText{
+    width: max-content;
+    height: max-content;
+    color: #8C8C8C;
+    font-size: 16px;
+    margin: 0;
+}
+
+.productSpecTitle{
+    width: max-content;
+    height: max-content;
+    color: #8C8C8C;
+    font-size: 16px;
+    margin: 0.5% 0 0.5% 2%;
 }
 
 @media screen and (max-width: 1024px) and (min-width: 480px){
@@ -92,4 +147,145 @@
         flex-direction: column;
     }
 
+    .address {
+        width: 100%;
+        height: 4%;
+        display: flex;
+         justify-content: normal;
+        align-items: center;
+        background-color: #f0f0f0;
+    }
+
+    #productOuter {
+        width: 100%;
+         height: auto;
+        display: flex;
+        flex-direction: column;
+        overflow-y: scroll;
+    }
+
+    #productPart1 {
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    #productImages {
+        width: 96%;
+         height: auto;
+        display: flex;
+        /* align-items: center; */
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .imgSm {
+        width: 100px;
+        height: 98px;
+        /* margin-bottom: 12%; */
+        border: 2px solid #8C8C8C;
+        margin: 5px;
+    }
+
+    #productMainImg {
+        width: 59%;
+        height: auto;
+        margin-top: 10px;
+    }
+
+    #productDesc {
+        width: 96%;
+        height: auto;
+        /* display: flex; */
+        /* flex-direction: column; */
+        margin-top: 10px;
+        /* text-align: -webkit-right; */
+    }
+
+    #descName{
+        width: auto;
+        height: max-content;
+        color: #8C8C8C;
+        font-size: 20px;
+        margin: 2% 0 0 0;
+        text-align: center;
+    }
+
+    #descCode{
+        width: auto;
+        height: max-content;
+        color: #8C8C8C;
+        font-size: 12px;
+        margin: 0;
+        text-align: center;
+    }
+
+
+    #descPrice{
+        width: auto;
+        height: max-content;
+        color: #07aea4;
+        font-size: 22px;
+        margin-top: 4%;
+        text-align: center;
+    }
+
+    #descDesc{
+        width: 96%;
+        height: max-content;
+        text-align: center;
+        color: #8C8C8C;
+        font-size: 18px;
+        margin: 2% 0 0 0;
+    }
+
+    #productPart2 {
+        width: 99%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        margin-top: 10px;
+        border: 1px solid #8C8C8C;
+    }
+
+    #productPart2Header {
+        width: 100%;
+        height: 25px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        background-color: #f0f0f0;
+        border-bottom: 1px solid #8C8C8C;
+    }
+
+    #productPenImg{
+        width: 3%;
+        height: 100%;
+        margin-left: 5px;
+    }
+
+    #productPenText{
+        width: max-content;
+        height: max-content;
+        color: #8C8C8C;
+        font-size: 16px;
+        margin-left: 5px;
+    }
+
+    .productSpecTitle{
+        width: max-content;
+        height: max-content;
+        color: #8C8C8C;
+        font-size: 16px;
+        margin: 8px 0 5px 5px;
+    }
+
+    #warrantyList{
+        color: #8C8C8C;
+        margin-bottom: 4px;
+    }
 }
